--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-i18n": "4.11.4",
     "@strapi/plugin-users-permissions": "4.11.4",
     "@strapi/strapi": "4.11.4",
     "better-sqlite3": "8.0.1",
+    "filter-button": "^0.2.2",
     "pg": "^8.11.3",
     "strapi-plugin-import-export-entries": "^1.21.0"
   },
