--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "better-sqlite3": "8.0.1",
     "filter-button": "^0.2.2",
     "pg": "^8.11.3",
+    "strapi-plugin-duplicate-button": "^1.1.14",
     "strapi-plugin-import-export-entries": "^1.21.0"
   },
   "author": {
